# servant-elm-example-app

./: .gitignore  LICENSE  Makefile  README.md  elm-package.json  servant-elm-example-app.cabal  stack.yaml
api/: Api.hs
api/Api/: Server.hs  Types.hs
backend/: Main.hs
code-generator/: Main.hs
frontend/src/: .Main.elm.swp  Events.elm  Lib.elm  Main.elm  NewBookForm.elm  State.elm  Types.elm  View.elm
frontend/src/BooksList/: State.elm  Types.elm  View.elm
frontend/src/Lib/: Effects.elm  Events.elm  Style.elm
frontend/src/NewBookForm/: State.elm  Types.elm  View.elm
frontend/src/RatingField/: State.elm  Types.elm  View.elm
src/: Lib.hs
