name:                servant-elm-example-app
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/servant-elm-example-app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      api
  ghc-options:         -Wall
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , servant-server >= 0.5 && < 0.6
                     , stm >= 2.4.4
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable backend
  hs-source-dirs:      backend
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lucid
                     , servant-elm-example-app
                     , servant-lucid
                     , servant-server
                     , stm >= 2.4.4
                     , wai >= 3.0.4.0
                     , warp >= 3.1.3.1
  default-language:    Haskell2010

executable code-generator
  hs-source-dirs:      code-generator
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-elm-example-app
                     , servant-elm
                     , servant-server
                     , servant-js
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-elm-example-app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-elm-example-app
